@@ -1,5 +1,6 @@
 2014-09-06  Kirit Saelensminde  <kirit@felspar.com>
  Allow `fostlib::future<>` instances to be compared for equality.
+ The meta data set on the progress for a task is now made available to the meter readings.
 
 2014-08-30  Kirit Saelensminde  <kirit@felspar.com>
  The `fostlib::accessors` now use perfect forwarding if `FOST_HAS_MOVE` is defined.
